# dislog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml  python.yml
src/dislog/: __init__.py  handler.py
tests/: __init__.py  test_async.py  test_sync.py
