[metadata]
name = discord-webhook-logger
version = attr: dislog.__version__
description = Provides an interface for using a discord webhook as a logger.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/DiscordWebhookLogger
download_url = https://github.com/regulad/DiscordWebhookLogger/archive/refs/heads/master.zip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GPLv3
keywords =
    requests

[options.packages.find]
where = src

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    requests >=2.27.1, <3
    python_version >= "3.6"
