[metadata]
name = dislog
version = attr: dislog.__version__
description = Provides an interface for using a discord webhook as a logger.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@regulad.xyz
url = https://github.com/regulad/dislog
download_url = https://github.com/regulad/dislog/archive/refs/heads/master.zip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = GPLv3
keywords =
    requests

[options.packages.find]
where = src

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.10, <4
install_requires =
    discord.py >=2.1.0, <3
    requests >=2.27.1, <3
    aiohttp>=3.7.4, <4
