[metadata]
name = dislog
version = attr: dislog.__version__
description = Provides an interface for using a discord webhook as a logger.
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@regulad.xyz
url = https://github.com/regulad/dislog
download_url = https://github.com/regulad/dislog/archive/refs/heads/master.zip
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Typing :: Typed
    Topic :: System :: Logging
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = GPLv3
keywords =
    requests

[options.packages.find]
where = src

[options.package_data]
dislog = py.typed

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.8, <4
install_requires =
    discord.py >=1.4, <3
    aiohttp >=3.8.4, <4
tests_require =
    tox >=4.4.5, <5
    tox-pyenv >=1.1.0, <2
    pre-commit >=3.0.4, <4

[options.extras_require]
speed =
    discord.py[speed] >=1.4, <3
sync =
    requests >=2.27.1, <3
type =
    mypy >=1.0.1, <2
    types-requests >=2.28.11.13, <3
test =
    pytest >=7.2.1, <8
    pytest-asyncio >=0.20.3, <1
